third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-mut-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-intobytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/transmute-mut-src-not-intobytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-intobytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/transmute-mut-src-not-intobytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
